# rust_ffi

./: .gitmodules  Readme.md
c_sharp/: Program.cs
c_sharp/libs/: librust_ffi_lib.dylib
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
